# object_recognition

./: .gitignore  CMakeLists.txt  package.xml
launch/: HSVvalues.txt  object_launch.launch  settings.yaml
sample_images/.background/: 1sample.ppm  32sample.ppm  42sample.ppm  47sample.ppm  48sample.ppm  49sample.ppm  7sample.ppm
sample_images/background/: 0sample.ppm  10sample.ppm  11sample.ppm  12sample.ppm  13sample.ppm  14sample.ppm  15sample.ppm  16sample.ppm  17sample.ppm  18sample.ppm  19sample.ppm  1sample.ppm  20sample.ppm  21sample.ppm  22sample.ppm  23sample.ppm  24sample.ppm  25sample.ppm  26sample.ppm  27sample.ppm  28sample.ppm  29sample.ppm  2sample.ppm  31sample.ppm  3sample.ppm  4sample.ppm  5sample.ppm  6sample.ppm  7sample.ppm  8sample.ppm  9sample.ppm
sample_images/bluecube/: 0sample.ppm  100bluecube.ppm  101bluecube.ppm  103bluecube.ppm  105bluecube.ppm  106bluecube.ppm  107bluecube.ppm  108bluecube.ppm  109bluecube.ppm  10sample.ppm  110bluecube.ppm  111bluecube.ppm  113bluecube.ppm  114bluecube.ppm  115bluecube.ppm  117bluecube.ppm  119bluecube.ppm  11sample.ppm  121bluecube.ppm  122bluecube.ppm  123bluecube.ppm  125bluecube.ppm  126bluecube.ppm  (+102 more)
src/: notworking_pointcloud_detection.cpp  object_detection.cpp  object_recognition.cpp  sample_image_creater.cpp
test_images/: backgroundtest2.ppm  bluecube.ppm  bluecubetest2.ppm  bluetriangle.ppm  greencube.ppm  greencylinder.ppm  patric.ppm  purplecross.ppm  redball.ppm  redballtest1.ppm  redballtest2.ppm  redcube.ppm  redcubetest1.ppm  redcubetest2.ppm  yellowball.ppm  yellowcube.ppm
(+1066 files in other folders)
